--- a/style.css
+++ b/style.css
@@ -280,6 +280,10 @@ header.main-header {
       align-items: center;
       text-align: center;
   }
+
+  .image-gallery {
+    text-align: center;
+  }
 }
 
 /* Proyectos.html */
@@ -295,25 +299,30 @@ header.main-header {
 }
 .card {
   background-color: #fff;
-  border: 1px solid var(--color-acento);
-  border-radius: 5px;
+  border: 1.5px solid var(--color-acento);
+  border-radius: 10px;
   overflow: hidden;
   text-align: center;
   padding-bottom: 1rem;
   transition: transform 0.3s ease;
 }
 .card img {
+  display: ruby-text;
   width: 100%;
   height: 200px; 
   object-fit: cover;
   display: block;
 }
 .card h3 {
+  float: inline-end;
+  color: var(--color-primario);
+  display: contents;
   font-family: var(--fuente-titulo);
   font-size: 1.2rem;
   margin: 1rem 0;
 }
 .card p {
+  display: ruby-text;
   font-family: var(--fuente-texto);
   margin: 0 1rem 1rem 1rem;
   font-size: 0.95rem;
@@ -322,4 +331,43 @@ header.main-header {
 /* Efecto hover */
 .card:hover {
   transform: translateY(-5px);
+}
+
+/* Tamaño inicial de las imágenes dentro de la galería */
+.image-gallery img {
+  max-width: 400px;   /* Ancho fijo */
+  max-height: 225px;  /* Alto fijo */
+  object-fit: contain;  /* Ajusta cómo se recorta/encaja la imagen si difiere la proporción */
+  cursor: pointer;    /* Muestra puntero tipo "mano" al pasar el mouse */
+  transition: all 0.3s ease; /* Transición suave */
+  margin: 5px;           /* Separación entre imágenes */
+}
+
+/* Clase que aplicamos para "pantalla completa" */
+.image-gallery img.fullscreen {
+  /* Para que se coloque por encima de todo */
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--color-fondo);
+  /* El contenedor máximo: llenará la pantalla sin salirse (mantiene proporción) */
+  max-width: 100vw;
+  max-height: 100vh;
+  /* Aseguramos que esté por encima de otros elementos */
+  z-index: 9999;
+  /* Para mantener la proporción original (intrinsic size) sin forzar width/height fijos */
+  width: auto;
+  height: auto;
+
+  cursor: pointer;
+
+}
+
+@media (max-width: 419px) {
+  .image-gallery img {
+    background-color: var(--color-fondo);
+    max-width: 95%;
+    max-height: 95%;
+  }
 }
