--- a/style.css
+++ b/style.css
@@ -306,10 +306,15 @@ header.main-header {
   padding-bottom: 1rem;
   transition: transform 0.3s ease;
 }
+
+a.card {
+  justify-items: anchor-center;
+}
+
 .card img {
   display: ruby-text;
-  width: 100%;
-  height: 200px; 
+  max-width: 400px;
+  max-height: 225px;
   object-fit: cover;
   display: block;
 }
