--- a/style.css
+++ b/style.css
@@ -361,6 +361,7 @@ a.card {
   margin: 1rem 0;
 }
 .card p {
+  float: inline-start;
   display: ruby-text;
   font-family: var(--fuente-texto);
   margin: 0 1rem 1rem 1rem;
