--- a/style.css
+++ b/style.css
@@ -421,3 +421,21 @@ a.card {
     padding: 8px;
   }
 }
+
+/* El preloader ocupa toda la pantalla */
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+/* El contenido se oculta inicialmente */
+#content {
+  display: none;
+}
